# human_aware_rrt_example

./: README.md
dummy_occupancy/: CMakeLists.txt  package.xml
dummy_occupancy/src/: dummy_occupancy_node.cpp
human_aware_test/: CMakeLists.txt  package.xml
human_aware_test/config/: config.yaml  config_panda.yaml  config_snake.yaml  multigoal.yaml  thor_safety.yaml
human_aware_test/launch/: human_aware_franka.launch  human_aware_panda.launch  human_aware_snake.launch  human_aware_test.launch  multigoal.launch
human_aware_test/scripts/: hamp_result.yaml  hamp_result_20211001_2.yaml  hamp_result_20211001_3.yaml  hamp_result_20211001_4.yaml  hamp_result_20211005_15queries(da continuare).yaml  hamp_result_20211005_71queries.yaml  hamp_result_20211006_12queries.yaml  hamp_result_20211006_65queries(appen_to_15).yaml  hamp_result_20211006_80queries.yaml  hamp_result_20211007_100queries_02m.yaml  hamp_result_20211008_05m.yaml  test_python.py  view_results.py  view_results_copy.py
human_aware_test/scripts/results/: hamp_result_13092021.yaml  hamp_result_20210101_1.yaml  hamp_result_3dof_distance_05_m_21092021_OK.yaml  hamp_result_3dof_distance_05_m_21092021_OK2.yaml  hamp_result_distance_01_m_20210923.yaml
human_aware_test/src/: human_aware_test_node.cpp  multigoal_test_node.cpp  run_tests_node.cpp
