<?xml version="1.0"?>
<package format="2">
  <name>human_aware_test</name>
  <version>0.0.0</version>
  <description>The human_aware_test package</description>
  <maintainer email="hypatia@todo.todo">hypatia</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_tutorials</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>moveit_tutorials</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>moveit_planning_helper</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
